adjust position of dashboard preview, fix component border cut off bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@
     --background: 220 18.37% 9.61%;
     --foreground: 220 16.67% 14.12%;
 
-    --screen-background: #14171d;
+    --screen-background: #1b1e25;
     --screen-foreground: #1e222a;
 
     --dialog-content: 220, 18.37%, 9.61%;
